Adds fastphotostyle support

--- a/serving/static/index.html
+++ b/serving/static/index.html
@@ -6,7 +6,7 @@
 
 	<body>
 		<form id="form">
-			Model name: <input name="model" type="text" value="model1"/> <br/>
+			Model name: <input name="model" type="text" value="munit1"/> <br/>
 			<input name="image" type="file"/>
 			<button type="submit">Go</button>
 		</form>
