--- a/serving/static/index.html
+++ b/serving/static/index.html
@@ -29,7 +29,7 @@
 					console.log(event);
 				});
 
-				xhr.open('POST', 'https://spaice.sb0.io/infer');
+				xhr.open('POST', 'https://server.artifyearth.co/infer');
 				xhr.send(new FormData(form));
 			});
 		});
